# docx-reader

./: Docx Reader_0.1.0_x64.dmg  README.md  docx-reader_0.1.0_x64.dmg  package-lock.json  package.json  rollup.config.js
src/: App.svelte  Button.svelte  Checkbox.svelte  ColorPicker.svelte  Doc.svelte  Form.svelte  Icon.svelte  Loader.svelte  Mark.svelte  Outline.svelte  OutlineItem.svelte  OutlineItemList.svelte  Panel.svelte  Para.svelte  ParaList.svelte  Run.svelte  Search.svelte  SearchResult.svelte  SearchResultRun.svelte  SearchResults.svelte  Topbar.svelte  TurningArrow.svelte  selection.ts  stores.ts  transition.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_commands.rs  default_menu.rs  document.rs  document_commands.rs  document_old.rs  main.rs  menu.rs
